# hascon

./: hascon.cabal  readme.md
src/: Hascon.hs  Test.hs
