cabal-version: 2.2
name:
  hascon
version:
  0.1
-- synopsis:
-- description:
bug-reports:
  https://github.com/chessai/hascon.git
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
build-type:
  Simple
extra-source-files:
  changelog.md
  readme.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Hascon
    --Test
  build-depends:
    , base >= 4.11 && < 4.14
    , semigroupoids
    , template-haskell >= 2.13 && < 2.16
    , text >= 1.2 && < 1.3
    , th-abstraction >= 0.3 && < 0.4
  ghc-options:
    -Wall -O2
  default-language:
    Haskell2010
